force-app/main/default/objects/GFH_Submission__c/GFH_Submission__c.object-meta.xml
<CustomObject>
    <label>Submission</label>
    <pluralLabel>Submissions</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>