force-app/main/default/objects/GFH_Submission__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <type>Lookup</type>
    <referenceTo>GFH_Student__c</referenceTo>
    <relationshipName>Student</relationshipName>
    <relationshipLabel>Student</relationshipLabel>
</CustomField>