force-app/main/default/objects/GFH_Submission__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Lookup</type>
    <referenceTo>GFH_Task__c</referenceTo>
    <relationshipName>Task</relationshipName>
    <relationshipLabel>Task</relationshipLabel>
</CustomField>